# nexus

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: build-server.yml  build.yml
apps/desktop/: dev-app-update.yml  electron-builder.yml  package-lock.json  package.json  tailwind.config.js
apps/desktop/scripts/: afterPack.js  update-server.sh
apps/desktop/src/main/: chat.ts  file-share.ts  identity.ts  index.ts  message-store.ts  p2p.ts  settings.ts  transfer-store.ts  updater.ts
apps/desktop/src/preload/: index.d.ts  index.ts
apps/desktop/src/renderer/: index.html
apps/desktop/src/renderer/src/: App.tsx  main.tsx  release-notes.ts
apps/desktop/src/renderer/src/assets/: main.css
apps/desktop/src/renderer/src/context/: P2PContext.tsx
apps/desktop/src/renderer/src/hooks/: useP2P.ts
apps/desktop/src/renderer/src/i18n/: en.json  index.ts  uk.json
apps/desktop/src/renderer/src/types/: p2p.ts
apps/desktop/src/shared/: config.ts
infra/bootstrap/: Cargo.toml
infra/bootstrap/src/: main.rs
infra/hub/: Cargo.toml
infra/hub/src/: auth.rs  avatar.rs  db.rs  handlers.rs  main.rs  state.rs
