[workspace]
members = [
  "packages/p2p-core",
  "infra/hub",
  "infra/bootstrap",
]
resolver = "2"

[workspace.dependencies]
libp2p = { version = "0.54", features = [
  "tokio",
  "tcp",
  "noise",
  "yamux",
  "gossipsub",
  "kad",
  "identify",
  "request-response",
  "macros",
  "dns",
  "autonat",
  "relay",
  "dcutr",
  "quic",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
blake3 = "1"
hex = "0.4"
