[package]
name = "nexus-bootstrap"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nexus-bootstrap"
path = "src/main.rs"

[dependencies]
libp2p = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
futures = "0.3"
