[package]
name = "nexus-hub"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nexus-hub"
path = "src/main.rs"

[dependencies]
socketioxide = { version = "0.15", features = ["state"] }
axum = { version = "0.8", features = ["multipart"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
dashmap = "6"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
image = "0.25"
